# 3d-game-shaders-for-beginners

./: .gitignore
demonstration/: CMakeLists.txt  demonstration.sln  demonstration.vcxproj  demonstration.vcxproj.filters
demonstration/eggfiles/: banner.egg  shutters.egg  weather-vane.egg
demonstration/shaders/fragment/: base_color.frag  outline.frag
demonstration/shaders/vertex/: base_modelmatrix.vert
demonstration/src/: Chapter0.cpp  Chapter1.cpp  demonstration.cpp
